--- a/WechatRobot/MainWindow.xaml
+++ b/WechatRobot/MainWindow.xaml
@@ -1,12 +1,72 @@
-﻿<Window x:Class="WechatRobot.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WechatRobot"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+﻿<DMSkin:DMSkinWindow
+    x:Class="WechatRobot.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:DMSkin="clr-namespace:DMSkin;assembly=DMSkin" 
+    xmlns:local="clr-namespace:WechatRobot"
+    mc:Ignorable="d"
+    Width="1020"
+    Height="670"
+    CaptionBackground="#ffffff"
+    CaptionHeight="50"
+    Foreground="White"
+ 
+    SystemButtonCloseOverColor="Red"
+    SystemButtonForeground="#666666"
+    SystemButtonOverColor="#10000000"
+    SystemButtonSize="50"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None" Loaded="DMSkinWindow_Loaded" WindowState="Maximized" Closing="DMSkinWindow_Closing" >
+
+    <!--Style="{StaticResource DMSkinWindowStyle}"-->
+    
+    <DMSkin:DMSkinWindow.TitleContent>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Background="#FFF2F2F1" Grid.Column="0" VerticalAlignment="Center" Orientation="Horizontal">
+
+                <Ellipse  Margin="5,0,0,0" Width="30" Height="50" VerticalAlignment="Center" >
+                    <!--<Ellipse.Fill>
+                        <ImageBrush ImageSource="Image/Load.png" Stretch="UniformToFill"/>
+                    </Ellipse.Fill>-->
+                </Ellipse>
+                <TextBlock
+                    Margin="5,0,0,0"
+                    VerticalAlignment="Center"
+                    FontSize="20"
+                    Foreground="#666666"
+                    Text="AT04" />
+
+            </StackPanel>
+            <Border Height="1" Width="140" Background="#E6E6E6" VerticalAlignment="Bottom"  />
+            <StackPanel  Grid.Column="1">
+            </StackPanel>
+
+        </Grid>
+    </DMSkin:DMSkinWindow.TitleContent>
     <Grid>
-        
+
+
+        <!--<Ellipse   Margin="5,0,10,0" Width="22" Height="22" VerticalAlignment="Center" HorizontalAlignment="Right" MouseLeftButtonDown="Ellipse_MouseLeftButtonDown" MouseRightButtonDown="Ellipse_MouseRightButtonDown"  >
+            <Ellipse.Fill>
+                <ImageBrush x:Name="Eimage"  ImageSource="Image/Load.png" Stretch="UniformToFill"/>
+            </Ellipse.Fill>
+        </Ellipse>-->
+
+        <!--布局界面-->
+        <Grid >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+        </Grid>
+
     </Grid>
-</Window>
+</DMSkin:DMSkinWindow>
